fixed logo postion, topics display, js liked active on mobile, remove difficulty from cards

--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -168,6 +168,12 @@ nav .brand-logo {
   padding-left: 28px;
   background: url(../img/logo.png) no-repeat left center;
   background-size: 25px;
+  margin-left: 15px;
+}
+@media only screen and (min-width: 993px) {
+  nav .brand-logo {
+    margin-left: 0;
+  }
 }
 @media (min--moz-device-pixel-ratio: 1.3), (-o-min-device-pixel-ratio: 2.6 / 2), (-webkit-min-device-pixel-ratio: 1.3), (min-device-pixel-ratio: 1.3), (min-resolution: 1.3dppx) {
   nav .brand-logo {
