--- a/public/css/sass/_header.sass
+++ b/public/css/sass/_header.sass
@@ -10,6 +10,9 @@ nav .brand-logo
 	padding-left: 28px
 	background: url(../img/logo.png) no-repeat left center
 	background-size: 25px
+	margin-left: 15px
+	@media only screen and (min-width : 993px)
+		margin-left: 0
 	+image-2x('../img/logo@2x.png', 25px, auto)
 	+respond-to(600px)
 		padding-left: 38px
