--- a/public/css/sass/_recipe.sass
+++ b/public/css/sass/_recipe.sass
@@ -360,8 +360,11 @@ a
 			width: 75px
 		.active
 			color: white
+.parent-right-topic-title
+	padding: 3px 0 0
 .right-topic-title
 	display: inline-block
 	width: calc(100% - 45px)
 	overflow: hidden
+	margin-bottom: -3px
 	text-overflow: ellipsis
