--- a/public/css/sass/recipe_card.sass
+++ b/public/css/sass/recipe_card.sass
@@ -23,11 +23,6 @@
 			padding-bottom: 16px
 			font-size: 16px
 			font-weight: 300
-		.card-level
-			position: absolute
-			display: block
-			right: 16px
-			bottom: 8px
 	.card-content
 		padding: 24px 16px
 		min-height: 195px
